--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -91,7 +91,7 @@
             <td><%= order_products.product.name %></td>
             <td><%= order_products.including_tax_price %></td>
             <td><%= order_products.amount %></td>
-            <td><%= order_products.including_tax_price * rder_products.amount %></td>
+            <td><%= order_products.including_tax_price * order_products.amount %></td>
           </tr>
         </tbody>
         <% end %>
