--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -14,7 +14,7 @@
         </div>
           <% end %>
       </div>
-          <%= link_to '商品を検索する', products_path %>
+          <%= link_to '上部に戻る', products_path %>
           <%= paginate @products %>
     </div>
   </div>
