--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -8,7 +8,7 @@
                   <tr>
                      <td><h3 class="product-name"><%= @product.name %></h3></td>
                      <td><h3 class="product-body"><%= @product.body %></h3></td>
-                     <td><h3 class="product-price">¥<%= @product.excluding_tax_price %>(税込み)</h3></td>
+                     <td><h3 class="product-price">¥<%= @product.excluding_tax_price %>(税抜き)</h3></td>
                   </tr>
                </table>
                <div>
