--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -114,6 +114,9 @@ body{
   margin: 30px 0 ;
 }
 
+.text-center{
+  margin: auto auto;
+}
 
 .address1{
   margin:  50px 150px;
@@ -294,4 +297,15 @@ body{
 }
 .top{
   text-align: right;
+}
+
+.order{
+
+}
+.order1{
+  margin: 20px;
+}
+
+.order2{
+  text-align: center;
 }
